# SimpleQMC

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  README.md
src/cc/: CMakeLists.txt  README.md  hydrogen.cc  hydrogen.hpp  lithium.cc  lithium.hpp  simple_qmc.cc  simple_qmc.hpp  test_hydrogen.cc
src/symbolic/: codegen.wls  codegen_h2mol.wls
src/utils/: energy_surface.txt  graph.py  graph_h2.py  h2_pes.txt
