add_definitions(-std=c++11)
find_package(fmt CONFIG REQUIRED)
find_package(cxxopts CONFIG REQUIRED)

set(SIMPLE_QMC_SRC simple_qmc.cc)
set(SIMPLE_QMC_SRC_EXE simple_qmc.x)
add_executable(${SIMPLE_QMC_SRC_EXE} ${SIMPLE_QMC_SRC})
target_link_libraries(${SIMPLE_QMC_SRC_EXE} PRIVATE fmt::fmt fmt::fmt-header-only)
target_link_libraries(${SIMPLE_QMC_SRC_EXE} PRIVATE cxxopts::cxxopts)
# install(TARGETS ${SIMPLE_QMC_SRC_EXE} DESTINATION binary)